--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -65,7 +65,7 @@
         .modular-scale(-1);
     }
 
-    @media @medium-up {
+    @media @md-up {
         h1,
         .h1 {
             .modular-scale(4);
