--- a/src/styles/layout/containers.less
+++ b/src/styles/layout/containers.less
@@ -17,7 +17,7 @@
 
     // Container Medium
     .use-screen-md(@boolean) when (@boolean = true) {
-        @media @medium-up {
+        @media @md-up {
             .container {
                 width:@container-md;
             }
@@ -27,7 +27,7 @@
 
     // Container Large
     .use-screen-lg(@boolean) when (@boolean = true) {
-        @media @large-up {
+        @media @lg-up {
             .container {
                 width: @container-lg;
             }
@@ -38,7 +38,7 @@
 
     // Container Extra-Large
     .use-screen-xl(@boolean) when (@boolean = true) {
-        @media @xlarge-up {
+        @media @xl-up {
             .container {
                 width: @container-xl;
             }
