--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -99,7 +99,7 @@
         // Inline styles
         &.checkbox--inline,
         &.radio--inline {
-            @media @medium-up {
+            @media @md-up {
                 display: inline-block;
                 margin-right: @spacing-base; // space out consecutive inline controls
             }
