--- a/src/styles/utilities/current-media-query.less
+++ b/src/styles/utilities/current-media-query.less
@@ -21,19 +21,19 @@
         border-radius: 0 0 0 3px;
         background: rgba(0,0,0,0.5);
 
-        @media @small-up {
+        @media @sm-up {
             content: "@sm";
         }
 
-        @media @medium-up {
+        @media @md-up {
             content: "@md";
         }
 
-        @media @large-up {
+        @media @lg-up {
             content: "@lg";
         }
 
-        @media @xlarge-up {
+        @media @xl-up {
             content: "@xl";
         }
     }
