--- a/src/styles/utilities/responsive-utilities.less
+++ b/src/styles/utilities/responsive-utilities.less
@@ -12,7 +12,7 @@
     .u-hide-xs-up {
         .hide-conditional();
     }
-    @media @xsmall-down {
+    @media @xs-down {
         .u-hide-xs-down {
             .hide-conditional();
         }
@@ -20,13 +20,13 @@
 
     // Small
 
-    @media @small-up {
+    @media @sm-up {
         .u-hide-sm-up {
             .hide-conditional();
         }
     }
 
-    @media @small-down {
+    @media @sm-down {
         .u-hide-sm-down {
             .hide-conditional();
         }
@@ -34,12 +34,12 @@
 
     // Medium
 
-    @media @medium-up {
+    @media @md-up {
         .u-hide-md-up {
             .hide-conditional();
         }
     }
-    @media @medium-down {
+    @media @md-down {
         .u-hide-md-down {
             .hide-conditional();
         }
@@ -47,12 +47,12 @@
 
     // Large
 
-    @media @large-up {
+    @media @lg-up {
         .u-hide-lg-up {
             .hide-conditional();
         }
     }
-    @media @large-down {
+    @media @lg-down {
         .u-hide-lg-down {
             .hide-conditional();
         }
@@ -60,7 +60,7 @@
 
     // Extra-large
 
-    @media @xlarge-up {
+    @media @xl-up {
         .u-hide-xl-up {
             .hide-conditional();
         }
