--- a/src/styles/layout/grids.less
+++ b/src/styles/layout/grids.less
@@ -8,6 +8,31 @@
         .make-row();
     }
 
+    // Row with half gutters
+    .row--half-gutters {
+        &.row {
+            margin-left: ceil(@grid-gutter-width / -4);
+            margin-right: floor(@grid-gutter-width / -4);
+        }
+        > [class*='col-'] {
+            padding-left:(@grid-gutter-width / 4);
+            padding-right: (@grid-gutter-width / 4);
+        }
+    }
+
+    // Under condiseration
+    // Row with double gutters
+    /*.row--double-gutters {
+        &.row {
+            margin-left: -@grid-gutter-width;
+            margin-right: -@grid-gutter-width;
+        }
+        > [class*='col-'] {
+            padding-left: @grid-gutter-width;
+            padding-right:  @grid-gutter-width;
+        }
+    }*/
+
     // Row without gutters
     .row--without-gutters {
         &.row {
