--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -15,6 +15,7 @@
 // Gutter width between columns (use px|%|rem)
 @grid-columns:                  12;
 @grid-gutter-width:             24px;
+@use-flex-grid:                 false;
 
 // Breakpoints & container widths
 @breakpoint-xs:                 0;
