--- a/templates/_iconfont/icons.html
+++ b/templates/_iconfont/icons.html
@@ -135,11 +135,6 @@
             margin-bottom: 1rem;
         }
 
-        .docs-content .addons__tooltips a {
-            float: left;
-            clear: both;
-        }
-
         .docs-content .animation {
             cursor: pointer;
             text-align: center;
@@ -175,7 +170,8 @@
             margin: 0 auto 1rem auto;
         }
 
-        .docs-content .animation .dot {
+        .docs-content .dot,
+        .docs-content .addons__tooltips .example a {
             display: inline-block;
             width: 1rem;
             height: 1rem;
@@ -362,7 +358,7 @@
                 <header>
                     <h3 class="u-muted">Headings</h3>
                 </header>
-                <div>
+                <div class="example">
                     <h1>This is heading 1 (h1)</h1>
                     <h2>This is heading 2 (h2)</h2>
                     <h3>This is heading 3 (h3)</h3>
@@ -508,12 +504,12 @@
                 <header>
                     <h3 class="u-muted">Responsive video</h3>
                 </header>
-                    <div class="example">
-                        <!-- Default aspect-ratio is 16:9 -->
-                        <div class="embed-wrap">
-                            <iframe src="http://player.vimeo.com/video/54690885?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" width="500" height="281" allowfullscreen></iframe>
-                        </div>
+                <div class="example">
+                    <!-- Default aspect-ratio is 16:9 -->
+                    <div class="embed-wrap">
+                        <iframe src="http://player.vimeo.com/video/54690885?title=0&amp;byline=0&amp;portrait=0&amp;color=ff0179" width="500" height="281" allowfullscreen></iframe>
                     </div>
+                </div>
             </article>
         </section>
         <hr />
@@ -1067,7 +1063,7 @@
                 </header>
                 <div class="example">
                     <div class="table-responsive">
-                        <table id="tables__responsive">
+                        <table id="tables__responsive" class="table" class="table">
                             <caption>
                                 Optional table caption
                             </caption>
@@ -1586,6 +1582,13 @@
                                     <div class="u-float-none">Remove float from element</div>
                                 </td>
                             </tr>
+                            <tr>
+                                <td><code>.u-center-block</code>
+                                </td>
+                                <td>
+                                    <div class="u-center-block" style="max-width: 200px;">Set element horizontally center using margin and display block.</div>
+                                </td>
+                            </tr>
                             <tr style="height: 96px;">
                                 <td><code>.u-flex-center</code>
                                 </td>
@@ -1742,6 +1745,12 @@
                                 </td>
                             </tr>
                             <tr>
+                                <td><code>.text-overflow();</code>
+                                </td>
+                                <td>Text-overflow will shorten text with an ellipsis.
+                                </td>
+                            </tr>
+                            <tr>
                                 <td><code>.momentun-scrolling();</code>
                                 </td>
                                 <td>Add momentum scrolling to element
@@ -1761,12 +1770,12 @@
         <hr />
         <section class="addons container">
             <header>
-                <h2 class="u-text-normal">Addons</h2>
+                <h2 class="u-text-normal">Additional components</h2>
             </header>
             <article class="addons__tooltips">
                 <header>
                     <h3 class="u-muted">Tooltips</h3>
-                    <p>Add tooltips built entirely in CSS to nearly any element. Use  accessible <code>aria-label="<em>Tooltip content</em>"</code> attribute for tooltip content and <code>class="tooltip tooltip--top"</code> attributes. You can make tooltips multiline with additional <code>tooltip--multiline</code> class.
+                    <p>Add tooltips built entirely in CSS to nearly any element. Use accessible <code>aria-label="<em>Tooltip content</em>"</code> attribute for tooltip content and <code>class="tooltip tooltip--top"</code> attributes. You can make tooltips multiline with additional <code>tooltip--multiline</code> class.
                     </p>
                 </header>
                 <div class="well u-clearfix u-text-center example">
