flex-grid fixes + utilies, fluid font-size mixin

--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -7,6 +7,7 @@
     @import 'mixins/clearfix';
     @import 'mixins/font-face';
     @import 'mixins/font-size';
+    @import 'mixins/font-size-fluid';
     @import 'mixins/grid-framework';
     @import 'mixins/grid';
     @import 'mixins/hide-text';
