--- a/src/styles/utilities/utilities.less
+++ b/src/styles/utilities/utilities.less
@@ -82,6 +82,16 @@
         align-items: center !important;
     }
 
+    .u-flex-top {
+        display: flex !important;
+        align-items: flex-start !important;
+    }
+
+    .u-flex-bottom {
+        display: flex !important;
+        align-items: flex-end !important;
+    }
+
 
     // Text utilities
 
