Set default font-size in px for rem-base

--- a/src/styles/base/main.less
+++ b/src/styles/base/main.less
@@ -4,7 +4,7 @@
 .main(@boolean) when (@boolean = true) {
 
     :root {
-        font-size: (unit(@base-font-size / 16) * 100%); // might as well be in px size in order to rem work...
+        font-size: @base-font-size; // Default `font-size` for used with `rem` type scales.
         height: 100%; // Ensure the <html> element's `height` is at least the viewport height.
     }
 
