minor fixes how icon-fonts are build

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -253,7 +253,7 @@
 @nav-responsive-breakpoint:     768px;
 
 // Iconography
-@icon-font-size:                14px;
+@icon-font-size:                @base-font-size;
 
 // Border-radius
 @border-radius-default:         4px;
