--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -178,6 +178,7 @@
 // Inputs, textarea, select
 @input-color:                   @grey-800;
 @input-placeholder-color:       @grey-400;
+@input-placeholder-hover-color: @grey-600;
 @input-background:              transparent;
 @input-border-color:            @grey-200;
 @input-border-color-hover:      @grey-600;
@@ -192,6 +193,7 @@
 
 // Checkbox & radio buttons
 @input-box-size:                @spacing-base;
+@input-checkbox-radio-margin:   @spacing-half;
 @input-checkbox-checked-color:  currentColor;
 @input-checkbox-border-radius:  0;
 @input-radio-checked-color:     currentColor;
