--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -70,7 +70,7 @@
 // Produce font-size in default modular-scale steps. Used in headings etc.
 @modular-scale-base:            @base-font-size;
 @modular-scale-ratio:           @perfect-fourth;
-@modular-scale-px-output:       false;
+@modular-scale-px-output:       true;
 
 // @Font-Face (uncomment to use)
 // Options: 'font-family', 'font-file-name', font-weight, font-style
