--- a/src/styles/objects/nav-responsive.less
+++ b/src/styles/objects/nav-responsive.less
@@ -29,7 +29,7 @@
             }
             // Hide toggle-buttons
             .nav-toggle,
-            .nav-item__toggle {
+            .dropdown-toggle {
                 display: none;
             }
         }
@@ -50,7 +50,6 @@
         position: relative;
         height: @toggle-height;
         width: @toggle-width;
-        display: inline-block;
         .nav-toggle__label {}
         .nav-toggle__icon {
             .bar {
