--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -113,8 +113,8 @@
 @color-primary-variant-3:       saturate(@color-primary, 100%);
 
 @color-secondary:               #3F51B5;
-@color-secondary-variant-1:     darken(@color-primary, 10%);
-@color-secondary-variant-2:     lighten(@color-primary, 10%);
+@color-secondary-variant-1:     darken(@color-secondary, 10%);
+@color-secondary-variant-2:     lighten(@color-secondary, 10%);
 @color-secondary-variant-3:     saturate(@color-secondary, 100%);
 
 // UI colors
@@ -124,28 +124,29 @@
 @color-info:                    #5bc0de;
 
 // Social Media colors
-@color-behance:                 #053eff;
-@color-blogger:                 #fb8f3d;
+@color-behance:                 #1769ff;
 @color-dribbble:                #ea4c89;
-@color-dropbox:                 #0d84de;
+@color-dropbox:                 #007ee5;
 @color-facebook:                #3b5998;
-@color-flickr:                  #ff0084;
-@color-foursquare:              #0072b1;
-@color-github:                  #333333;
-@color-google-plus:             #dd4b39;
+@color-flickr:                  #0063dc;
+@color-foursquare:              #f94877;
+@color-github:                  #181717;
+@color-google:                  #4285f4;
 @color-heimo:                   #ffb549;
-@color-instagram:               #517fa4;
-@color-linkedin:                #007bb6;
-@color-pinterest:               #e0242a;
-@color-rss:                     #ee802f;
-@color-skype:                   #ee802f;
-@color-souncloud:               #ff3a00;
-@color-spotify:                 #81b71a;
-@color-tumblr:                  #35465c;
-@color-twitter:                 #00aced;
-@color-vimeo:                   #aad450;
+@color-instagram:               #125688;
+@color-linkedin:                #0077b5;
+@color-medium:                  #00ab6b;
+@color-mixcloud:                #314359;
+@color-pinterest:               #bd081c;
+@color-rss:                     #ffa500;
+@color-skype:                   #00aff0;
+@color-souncloud:               #ff3300;
+@color-spotify:                 #84bd00;
+@color-tumblr:                  #36465d;
+@color-twitter:                 #55acee;
+@color-vimeo:                   #1ab7ea;
 @color-wordpress:               #21759b;
-@color-youtube:                 #bb0000;
+@color-youtube:                 #cd201f;
 
 // Basic colors for body
 @base-background:               @white;
