--- a/templates/_iconfont/icons.html
+++ b/templates/_iconfont/icons.html
@@ -5,10 +5,11 @@
 <!--<![endif]-->
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAE Framework</title>
+    <title>RAE Framework / Styleguide</title>
+
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <!-- Page styles -->
     <link rel="stylesheet" href="../styles/style.css">
@@ -2229,6 +2230,7 @@
             });
         });
     </script>
+</body>
 
 </html>
 <!-- Built with love using Rae Framework -->
