--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -1,7 +1,7 @@
 //
 // Form styles
 // -------------------------------------------------------
-.use-form-styles(@boolean) when (@boolean = true) {
+.use-form-styles(@boolean) when (@boolean =true) {
 
     // Fieldset with borders
     fieldset.fieldset--bordered {
@@ -13,92 +13,85 @@
         }
     }
 
-    // This is basic styled form. You can make variatios like .form-minimal
-    .form {
-        &:extend(.clearfix all);
-
-        input[type="date"],
-        input[type="datetime"],
-        input[type="datetime-local"],
-        input[type="email"],
-        input[type="month"],
-        input[type="number"],
-        input[type="password"],
-        input[type="search"],
-        input[type="tel"],
-        input[type="text"],
-        input[type="time"],
-        input[type="url"],
-        input[type="week"],
-        textarea,
-        select {
-            // Reset iOS box-shadow
-            // Get rid of <select> arrow in FF, idea for this hack:
-            // https://gist.github.com/joaocunha/6273016
-            -moz-appearance: none;
-            -webkit-appearance: none;
-            appearance: none;
-
-            background-color: @input-background;
-            background-image: none;
-            border: @input-border-width solid @input-border-color;
-            border-radius: @input-border-radius;
-            box-shadow: @input-box-shadow;
-            color: @input-color;
-            font-size: @input-font-size;
-            height: @input-height;
-            padding: ((@input-height - (@input-font-size * @line-height-ratio)) / 2) @input-horizontal-padding;
-            transition: background-color @transition-duration-default @transition-easing-default, color @transition-duration-default @transition-easing-default, opacity @transition-duration-default @transition-easing-default, border-color @transition-duration-default @transition-easing-default;
-
-            &:hover {
-                border-color: @input-border-color-hover;
-            }
-
-            &:focus {
-                border-color: @input-border-color-focus;
-                box-shadow: @input-focus-box-shadow;
-            }
+    // Basic styles for form elements
+    input[type="date"],
+    input[type="datetime"],
+    input[type="datetime-local"],
+    input[type="email"],
+    input[type="month"],
+    input[type="number"],
+    input[type="password"],
+    input[type="search"],
+    input[type="tel"],
+    input[type="text"],
+    input[type="time"],
+    input[type="url"],
+    input[type="week"],
+    textarea,
+    select {
+        // Reset iOS box-shadow
+        // Get rid of <select> arrow in FF, idea for this hack:
+        // https://gist.github.com/joaocunha/6273016
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
+        background-color: @input-background;
+        background-image: none;
+        border: @input-border-width solid @input-border-color;
+        border-radius: @input-border-radius;
+        box-shadow: @input-box-shadow;
+        color: @input-color;
+        font-size: @input-font-size;
+        height: @input-height;
+        padding: ((@input-height - (@input-font-size * @line-height-ratio)) / 2) @input-horizontal-padding;
+        transition: background-color @transition-duration-default @transition-easing-default, color @transition-duration-default @transition-easing-default, opacity @transition-duration-default @transition-easing-default, border-color @transition-duration-default @transition-easing-default;
+        &:hover {
+            border-color: @input-border-color-hover;
         }
-
-        textarea,
-        select[multiple] {
-            height: auto;
+        &:focus {
+            border-color: @input-border-color-focus;
+            box-shadow: @input-focus-box-shadow;
         }
+    }
 
+    textarea,
+    select[multiple] {
+        height: auto;
+    }
+
+    select:not([multiple]) {
+        cursor: pointer;
+        position: relative;
+        background-image: url(../images/form/select.svg);
+        background-repeat: no-repeat;
+        background-position: right 1em center;
+        background-size: (@input-height / 3) auto;
+        &:focus:-moz-focusring {
+            color: transparent;
+            text-shadow: 0 0 0 #000;
+        }
+        &:hover {
+            background-image: url(../images/form/select_hover.svg);
+        }
+    }
+    @-moz-document url-prefix() {
         select:not([multiple]) {
-            cursor: pointer;
-            position: relative;
-            background-image: url(../images/form/select.svg);
-            background-repeat: no-repeat;
-            background-position: right 1em center;
-            background-size: (@input-height / 3) auto;
-            &:focus:-moz-focusring {
-                color: transparent;
-                text-shadow: 0 0 0 #000;
-            }
-            &:hover {
-                background-image: url(../images/form/select_hover.svg);
-            }
-        }
-        @-moz-document url-prefix() {
-            select:not([multiple]) {
-                // Get rid of <select> arrow in FF < 30, idea for this hack:
-                // https://gist.github.com/joaocunha/6273016
-                text-indent: 0.01px;
-                text-overflow: '';
-                padding-right: 2rem;
-            }
+            // Get rid of <select> arrow in FF < 30, idea for this hack:
+            // https://gist.github.com/joaocunha/6273016
+            text-indent: 0.01px;
+            text-overflow: '';
+            padding-right: 2rem;
         }
     }
 
     // Radios and checkboxes
-    .radio, .checkbox {
+    .radio,
+    .checkbox {
         margin-bottom: @input-checkbox-radio-margin; // add some spacing between checkboxes/radios
         user-select: none;
         &:last-child {
             margin-bottom: 0;
         }
-
         // Inline styles
         &.checkbox--inline,
         &.radio--inline {
@@ -108,7 +101,6 @@
                 margin-right: @spacing-base; // space out consecutive inline controls
             }
         }
-
         // Hide inputs
         [type="checkbox"],
         [type="radio"] {
@@ -121,7 +113,6 @@
             padding: 0;
             border: 0;
         }
-
         // Control inputs with label
         label {
             position: relative;
@@ -137,14 +128,12 @@
                 width: @input-box-size;
                 height: @input-box-size;
             }
-
             &:before {
                 background-color: @input-background;
                 border: @input-border-width solid @input-border-color;
                 box-shadow: @input-box-shadow;
                 transition: border-color @transition-duration-default @transition-easing-default;
             }
-
             &:after {
                 // Background-image method
                 //background-size: (@input-box-size - ceil(@input-box-size / 6)); // make background-size consistent in ie9 and modern browsers.
@@ -152,23 +141,19 @@
                 //background-position: center center;
                 //background-origin: border-box; // fix IE9 background positioning
                 //transform: scale(0);
-
                 // CSS-only method
                 font-size: @input-box-size; // set font-size for em-scaling
                 transform: scale(0) rotate(45deg);
                 transition: transform 100ms @transition-easing-default;
             }
-
-            &:hover::before {
+            &:hover::before {
                 border-color: @input-border-color-hover;
             }
         }
-
         [type="checkbox"]:checked,
         [type="radio"]:checked {
             + label:after {
                 //transform: scale(1);
-
                 //CSS Only method
                 transform: scale(1) rotate(45deg);
             }
@@ -187,10 +172,9 @@
             &:after {
                 // Background-image method
                 //background-image: url(../images/form/icon-checkbox.svg);
-
                 // CSS-only method
                 border: solid @input-checkbox-checked-color;
-                border-width: 0 (1em / 6) (1em / 6) 0 ;
+                border-width: 0 (1em / 6) (1em / 6) 0;
                 height: (1em / 1.5);
                 width: (1em / 2.75);
                 position: absolute;
@@ -209,7 +193,6 @@
             &:after {
                 // Background-image method
                 //background-image: url(../images/form/icon-radio.svg);
-
                 // CSS-only method
                 background-color: @input-radio-checked-color;
                 background-clip: padding-box;
@@ -223,13 +206,11 @@
     .form-item {
         display: block;
         margin-bottom: @form-item-spacing;
-
         // Margin for labels immediately after .form-item
         > label {
             margin-bottom: @label-margin;
         }
     }
-
 }
 
 .use-form-styles(@use-form-styles);
