--- a/src/styles/base/resets.less
+++ b/src/styles/base/resets.less
@@ -193,6 +193,13 @@
         }
     }
 
+    // Firefox inner outline on buttons
+    input::-moz-focus-inner,
+    button::-moz-focus-inner {
+        padding: 0;
+        border: 0;
+    }
+
     // Specify the border styles of tables
     table {
         border-collapse: collapse;
@@ -209,6 +216,7 @@
         background-color: @selection-background; // required when declaring ::selection
         text-shadow: none;
     }
+
 
     // Hide content from screens but not screenreaders
     @media screen {
