fixes to iconfont generation

--- a/templates/_iconfont/icons.less
+++ b/templates/_iconfont/icons.less
@@ -13,6 +13,9 @@
         text-transform: none;
         font-feature-settings: "liga";
         user-select: none;
+        -webkit-font-smoothing: subpixel-antialiased;
+        -moz-osx-font-smoothing: auto;
+
         .button & {
             line-height: inherit;
         }
